refactor: remove unused serialization code and add test for JiraClient (#124)